--- a/index.html
+++ b/index.html
@@ -3,90 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amine El Bousiydy | Cybersecurity</title>
+  <title>Amine El Bousiydy | Cybersecurity Portfolio</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
-  <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="container">
+    <header>
+      <h1>Amine El Bousiydy</h1>
+      <p>🕷️ Bug Bounty Hunter | 🛡️ Ethical Hacker | 🔐 Cybersecurity Analyst</p>
+    </header>
 
-  <header>
-    <h1 class="logo">CT101<span></span></h1>
-    <nav>
+    <section class="about">
+      <h2>👨‍💻 About Me</h2>
+      <p>I specialize in discovering vulnerabilities in web applications and sharing knowledge about ethical hacking and cybersecurity. I’m active on platforms like HackerOne and TryHackMe, and I enjoy breaking and securing systems.</p>
+    </section>
+
+    <section class="skills">
+      <h2>🛠️ Tools & Skills</h2>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li>Burp Suite</li>
+        <li>Nmap</li>
+        <li>Wireshark</li>
+        <li>Linux / Kali</li>
+        <li>Metasploit</li>
+        <li>OWASP Top 10</li>
       </ul>
-    </nav>
-  </header>
+    </section>
 
-  <section class="hero" id="home">
-    <div class="content">
-      <h2>Hi, I’m <span>Amine El Bousiydy</span></h2>
-      <p>Cybersecurity Analyst & Ethical Hacker from Morocco 🇲🇦<br>
-      Passionate about securing networks, exploiting vulnerabilities, and defending digital systems.</p>
-      <a href="#contact" class="btn">Hire Me</a>
-    </div>
-    <div class="image">
-      <img src="main.jpg" alt="Amine El Bousiydy">
-    </div>
-  </section>
-
-  <section id="skills" class="skills">
-  <h2>🛡️ Professional Skills</h2>
-  <div class="skills-grid">
-    <div class="skill-box">
-      <h3>🔒 Network Security</h3>
-      <p>Expert in securing LAN/WAN environments, VLANs, Firewalls (Cisco ASA, pfSense), IDS/IPS systems, and VPN tunnels.</p>
-    </div>
-    <div class="skill-box">
-      <h3>🧪 Penetration Testing</h3>
-      <p>Hands-on experience with Kali Linux tools (Nmap, Burp Suite, Metasploit, Hydra) for real-world vulnerability assessment.</p>
-    </div>
-    <div class="skill-box">
-      <h3>🐧 Linux Administration</h3>
-      <p>Proficient in system hardening, user rights management, bash scripting, and deploying secure Linux servers (Ubuntu/CentOS).</p>
-    </div>
-    <div class="skill-box">
-      <h3>🎯 Bug Bounty & OSINT</h3>
-      <p>Actively hunting for vulnerabilities on platforms like HackerOne & Bugcrowd, using tools like Recon-ng, Shodan, and Google Dorking.</p>
-    </div>
+    <section class="contact">
+      <h2>🔗 Connect With Me</h2>
+      <ul>
+        <li><a href="https://tryhackme.com/p/amine.skapino" target="_blank">TryHackMe</a></li>
+        <li><a href="https://hackerone.com/amine.skapino" target="_blank">HackerOne</a></li>
+        <li><a href="https://github.com/amine-skapino" target="_blank">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/amine-skapino" target="_blank">LinkedIn</a></li>
+        <li><a href="https://www.instagram.com/amine.skapino" target="_blank">Instagram</a></li>
+      </ul>
+    </section>
   </div>
-</section>
-
-
-<section id="projects" class="projects">
-  <h2>💻 Recent Professional Projects</h2>
-
-  <div class="project">
-    <h3>Enterprise Network Security Audit</h3>
-    <p>Conducted a comprehensive security audit for a mid-sized company, identifying vulnerabilities in firewall configurations, network segmentation, and remote access policies. Delivered detailed remediation plans and compliance reports aligned with ISO 27001 standards.</p>
-  </div>
-
-  <div class="project">
-    <h3>Automated Threat Detection System</h3>
-    <p>Developed a Python-based automation tool that parses syslogs and network traffic to detect anomalies and potential intrusions, integrating with SIEM platforms to trigger alerts in real-time.</p>
-  </div>
-
-  <div class="project">
-    <h3>Bug Bounty Program Contributions</h3>
-    <p>Discovered and responsibly disclosed critical vulnerabilities on multiple web applications, including SQL Injection and Cross-Site Scripting (XSS) flaws, earning recognition and rewards on platforms like HackerOne.</p>
-  </div>
-</section>
-
-
-  <section id="contact" class="contact">
-    <h2>📬 Contact Me</h2>
-    <p>Email: <a href="mailto:aminebousiydy@protonmail.com">aminebousiydy@protonmail.com</a></p>
-    <p>Instagram: <a href="https://www.instagram.com/cybertechnology101" target="_blank">@cybertechnology101</a></p>
-  </section>
-
-  <footer>
-    <p>© 2025 Amine El Bousiydy. All Rights Reserved.</p>
-  </footer>
-
 </body>
 </html>
