--- a/index.html
+++ b/index.html
@@ -7,46 +7,39 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
+    <header>
+      <h1>Amine El Bousiydy</h1>
+      <p>🕷️ Bug Bounty Hunter | 🛡️ Ethical Hacker | 🔐 Cybersecurity Analyst</p>
+    </header>
 
-  <!-- ===== Header ===== -->
-  <header>
-    <div class="logo">Amine.Skapino</div>
-    <nav>
+    <section class="about">
+      <h2>👨‍💻 About Me</h2>
+      <p>I specialize in discovering vulnerabilities in web applications and sharing knowledge about ethical hacking and cybersecurity. I’m active on platforms like HackerOne and TryHackMe, and I enjoy breaking and securing systems.</p>
+    </section>
+
+    <section class="skills">
+      <h2>🛠️ Tools & Skills</h2>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li>Burp Suite</li>
+        <li>Nmap</li>
+        <li>Wireshark</li>
+        <li>Linux / Kali</li>
+        <li>Metasploit</li>
+        <li>OWASP Top 10</li>
       </ul>
-    </nav>
-  </header>
+    </section>
 
-  <!-- ===== Hero Section ===== -->
-  <section class="hero" id="home">
-    <div class="content">
-      <h2>I'm <span>Amine El Bousiydy</span></h2>
-      <p>🕷️ Bug Bounty Hunter & Cybersecurity Analyst specialized in web vulnerabilities, ethical hacking, and network defense. I break things to protect them!</p>
-      <a href="#contact" class="btn">Let’s Connect</a>
-    </div>
-    <div class="image">
-      <img src="https://i.imgur.com/4M7IWwP.png" alt="Cybersecurity Hacker">
-    </div>
-  </section>
-
-  <!-- ===== Skills Section ===== -->
-  <section class="skills" id="skills">
-    <h2>🛠️ My Skills</h2>
-    <div class="skills-grid">
-      <div class="skill-box">
-        <h3>Web Exploitation</h3>
-        <p>OWASP Top 10, SQLi, XSS, IDOR, CSRF, and more.</p>
-      </div>
-      <div class="skill-box">
-        <h3>Tools</h3>
-        <p>Burp Suite, Nmap, Wireshark, Metasploit, Nikto, Gobuster.</p>
-      </div>
-      <div class="skill-box">
-        <h3>Platforms</h3>
-        <p>TryHackMe, HackerOne, Hack The Box, CTF challenges.</p>
-      </div>
-      <div class=
+    <section class="contact">
+      <h2>🔗 Connect With Me</h2>
+      <ul>
+        <li><a href="https://tryhackme.com/p/amine.skapino" target="_blank">TryHackMe</a></li>
+        <li><a href="https://hackerone.com/amine.skapino" target="_blank">HackerOne</a></li>
+        <li><a href="https://github.com/amine-skapino" target="_blank">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/amine-skapino" target="_blank">LinkedIn</a></li>
+        <li><a href="https://www.instagram.com/amine.skapino" target="_blank">Instagram</a></li>
+      </ul>
+    </section>
+  </div>
+</body>
+</html>
